DB-2505: java 7: use diamond operator, try/finally -> try-resource, collapse duplicate catch blocks,  indexOf -> conatins, StringBuffer -> StringBuilder, unnecessary boxing/unboxing